      Tux Paint installer; "tuxpaint-opencandy.iss", along with a file
      with secret key info (not included in CVS, of course!), build
      an OpenCandy-enabled version.  The OC account is currently
      maintained by Bill Kendrick <nbs@sonic.net>, lead developer.

      For more info, see http://www.tuxpaint.org/docs/opencandy/

  * Accessibility Improvements:
    ---------------------------
    * Added a mouse accessibility mode to avoid the need to drag the mouse.
      ("--mouse-accessibility")
      by Ankit Choudary <ankit.goaldecided@gmail.com> (GSOC 2010)
      with integration and fixes by
      Pere Pujal i Carabantes <pere@fornol.no-ip.org>

    * Added an option to display an on-screen keyboard when using the
      'Text' and 'Label' tools.  ("--onscreen-keyboard") [Experimental!]
      by Ankit Choudary <ankit.goaldecided@gmail.com> (GSOC 2010)

      FIXME:
        * Flickers a lot
        * "Caps" label overwrites "a"; perhaps show an up-arrow (a la
          old Mac keyboards?) (Unicode U+21CE or U+21EA?)
        * "Shift" key doesn't seem to do anything (I click it, and it
          highlights, then goes back to light blue)
        * Replace "Shift" with an arrow? (Unicode U+21E7)
        * Hightlight-on-hover isn't something we do elsewhere in
          Tux Paint; not a bad idea, but having the keyboard do it is
          inconsistent
        * Why is there an "Esc" key?
        * "Back" label goes outside of its button; perhaps a delete left-arrow?
          (Unicode U+232B)
        * "Ret" should probably be replaced with a carriage return
          down-then-left-arrow. (Unicode U+21B5 or U+23CE)
        * "Alt" seems to cause "ij" to get added to the text; what is
          this supposed to be for?
        * When using "Caps" (or "Shift") ... FIXME: What?
        * Keyboard layout should be configurable (at least via config
          file, if not (optionally) within the app); should support QWERTY,